--- a/src/wintermute-heartbeat/CMakeLists.txt
+++ b/src/wintermute-heartbeat/CMakeLists.txt
@@ -47,6 +47,7 @@ ADD_LIBRARY(wintermute-heartbeat
 WINTERMUTE_PLUGIN_DECLARE(
   NAME   heartbeat
   TARGET wintermute-heartbeat
+  VERSION ${WINTERMUTE_HEARTBEAT_VERSION}
   )
 
 WINTERMUTE_PLUGIN_VALIDATE(TARGET wintermute-heartbeat)
