--- a/src/wintermute-transport-zeromq/CMakeLists.txt
+++ b/src/wintermute-transport-zeromq/CMakeLists.txt
@@ -52,6 +52,7 @@ TARGET_INCLUDE_DIRECTORIES(transport-zmq
 WINTERMUTE_PLUGIN_DECLARE(
   NAME   transport-zmq
   TARGET transport-zmq
+  VERSION ${WINTERMUTE_ZMQ_VERSION}
   )
 
 WINTERMUTE_PLUGIN_VALIDATE(TARGET transport-zmq)
