[cmake] Update templates for CMake.
  * UseWintermute - add more paths for installation targets.
  * cmake_uninstall - use warnings instead of fatal errors.

--- a/cmake/Templates/Internal/UseWintermute.cmake.in
+++ b/cmake/Templates/Internal/UseWintermute.cmake.in
@@ -25,5 +25,9 @@ set(WINTERMUTE_BINARY_DIR
   ${WINTERMUTE_INSTALL_PREFIX}/@CMAKE_INSTALL_BINDIR@)
 set(WINTERMUTE_INCLUDE_DIR
   ${WINTERMUTE_INSTALL_PREFIX}/@CMAKE_INSTALL_INCLUDEDIR@/wintermute)
+set(WINTERMUTE_DOCS_DIR
+  ${WINTERMUTE_INSTALL_PREFIX}/@CMAKE_INSTALL_DATAROOTDIR@/doc)
+set(WINTERMUTE_DATA_DIR
+  ${WINTERMUTE_INSTALL_PREFIX}/@CMAKE_INSTALL_DATAROOTDIR@/wintermute)
 #set(WINTERMUTE_CMAKE_DIR
   #"${WINTERMUTE_INSTALL_PREFIX}/@CMAKE_INSTALL_DATAROOTDIR@/cmake-@CMAKE_MAJOR_VERSION@-@CMAKE_MINOR_VERSION@")
