--- a/cmake/Templates/Internal/cmake_uninstall.cmake.in
+++ b/cmake/Templates/Internal/cmake_uninstall.cmake.in
@@ -9,13 +9,14 @@ FILE(READ "@CMAKE_BINARY_DIR@/install_manifest.txt" files)
 STRING(REGEX REPLACE "\n" ";" files "${files}")
 FOREACH(file ${files})
   MESSAGE(STATUS "Uninstalling \"${file}\"")
-  IF(NOT EXISTS "${file}")
-    MESSAGE(FATAL_ERROR "File \"${file}\" does not exists.")
-  ENDIF(NOT EXISTS "${file}")
-  EXEC_PROGRAM("@CMAKE_COMMAND@" ARGS "-E remove \"${file}\""
-    OUTPUT_VARIABLE rm_out
-    RETURN_VARIABLE rm_retval)
-  IF("${rm_retval}" GREATER 0)
-    MESSAGE(FATAL_ERROR "Problem when removing \"${file}\"")
-  ENDIF("${rm_retval}" GREATER 0)
+  IF(NOT EXISTS "${file}" AND NOT IS_SYMLINK "${file}")
+    MESSAGE(WARNING "File \"${file}\" does not exists.")
+  ELSE()
+    EXEC_PROGRAM("@CMAKE_COMMAND@" ARGS "-E remove -f \"${file}\""
+      OUTPUT_VARIABLE rm_out
+      RETURN_VARIABLE rm_retval)
+    IF("${rm_retval}" GREATER 0)
+      MESSAGE(FATAL_ERROR "Problem when removing \"${file}\"")
+    ENDIF("${rm_retval}" GREATER 0)
+  ENDIF(NOT EXISTS "${file}" AND NOT IS_SYMLINK "${file}")
 ENDFOREACH(file)
