--- a/cmake/Templates/Doxyfile.in
+++ b/cmake/Templates/Doxyfile.in
@@ -38,7 +38,7 @@ BUILTIN_STL_SUPPORT    = YES
 CPP_CLI_SUPPORT        = NO
 SIP_SUPPORT            = NO
 IDL_PROPERTY_SUPPORT   = NO
-DISTRIBUTE_GROUP_DOC   = NO
+DISTRIBUTE_GROUP_DOC   = YES
 SUBGROUPING            = YES
 INLINE_GROUPED_CLASSES = YES
 INLINE_SIMPLE_STRUCTS  = YES
@@ -55,9 +55,9 @@ EXTRACT_STATIC         = YES
 EXTRACT_LOCAL_CLASSES  = YES
 EXTRACT_LOCAL_METHODS  = YES
 EXTRACT_ANON_NSPACES   = YES
-HIDE_UNDOC_MEMBERS     = NO
-HIDE_UNDOC_CLASSES     = NO
-HIDE_FRIEND_COMPOUNDS  = NO
+HIDE_UNDOC_MEMBERS     = YES
+HIDE_UNDOC_CLASSES     = YES
+HIDE_FRIEND_COMPOUNDS  = YES
 HIDE_IN_BODY_DOCS      = YES
 INTERNAL_DOCS          = YES
 CASE_SENSE_NAMES       = YES
@@ -253,7 +253,7 @@ EXCLUDE_SYMLINKS       = YES
 EXCLUDE_SYMBOLS        = "*Private" "W_*"
 EXAMPLE_PATH           = "@_doxy_EXAMPLE_PATH@"
 EXAMPLE_PATTERNS       =
-EXAMPLE_RECURSIVE      = NO
+EXAMPLE_RECURSIVE      = YES
 IMAGE_PATH             =
 INPUT_FILTER           =
 FILTER_SOURCE_FILES    = NO
@@ -272,7 +272,7 @@ REFERENCES_LINK_SOURCE = NO
 SOURCE_TOOLTIPS        = NO
 VERBATIM_HEADERS       = NO
 CLANG_ASSISTED_PARSING = YES
-#CLANG_OPTIONS          =
+CLANG_OPTIONS          = "@_doxy_compile_options@"
 
 #---------------------------------------------------------------------------
 # Configuration options related to the alphabetical class index
@@ -374,11 +374,11 @@ GENERATE_RTF           = NO
 #---------------------------------------------------------------------------
 # Configuration options related to the man page output
 #---------------------------------------------------------------------------
-GENERATE_MAN           = NO
-#MAN_OUTPUT             = man
-#MAN_EXTENSION          = .3
-#MAN_SUBDIR             =
-#MAN_LINKS              = YES
+GENERATE_MAN           = YES
+MAN_OUTPUT             = man
+MAN_EXTENSION          = .3
+MAN_SUBDIR             =
+MAN_LINKS              = YES
 
 #---------------------------------------------------------------------------
 # Configuration options related to the XML output
@@ -454,7 +454,7 @@ INCLUDED_BY_GRAPH      = YES
 CALL_GRAPH             = NO
 CALLER_GRAPH           = NO
 GRAPHICAL_HIERARCHY    = YES
-DIRECTORY_GRAPH        = YES
+DIRECTORY_GRAPH        = NO
 DOT_IMAGE_FORMAT       = png
 INTERACTIVE_SVG        = NO
 DOT_PATH               = "@DOXYGEN_DOT_PROGRAM@"
