cmake: Update plugin, modules and test driver.
  Update the test driver used to use the definition variable we provided
  instead of generating in the property, thus silencing a CMake warning.
  Also, dropped a optimization library down to -O2 and clean up the
  warning message from CMake when the stack backtrace flag doesn't
  exist.

--- a/cmake/Templates/plugin_driver.hh.in
+++ b/cmake/Templates/plugin_driver.hh.in
@@ -19,8 +19,6 @@
 #include <wintermute-core/plugin.hpp>
 #include "test_suite.hpp"
 
-#define PLUGIN_TEST_PATH "@_wpv_file@"
-
 using Wintermute::Plugin;
 
 class PluginVerifyTestSuite : public CxxTest::TestSuite
@@ -28,7 +26,7 @@ class PluginVerifyTestSuite : public CxxTest::TestSuite
 public:
   void testWorkWithPlugin()
   {
-    Plugin::Ptr pluginPtr = Plugin::find(PLUGIN_TEST_PATH);
+    Plugin::Ptr pluginPtr = Plugin::find(PLUGIN_PATH);
     TSM_ASSERT ( "Plugin was loaded from disk.", pluginPtr );
     TSM_ASSERT ( "Plugin was released from memory.", Plugin::release(pluginPtr->name()) );
   }
