test: Rename lib dir and quiet bootstrap.
  test: Use 'lib' instead of 'fixtures'.
    The tests referred to a fixture directory from the times when the
    sample plugin was built into the fixture directory. This makes it look
    it up in the general library directory.
  test: Add correct package.
  test: made cmake file extraction less verbose.
  test: Update provisioning script.

--- a/test/include/test_suite.hpp.in
+++ b/test/include/test_suite.hpp.in
@@ -19,6 +19,8 @@
 #define WINTERMUTE_TEST_SUITE_HPP
 
 #define TEST_BASE_DIR "@CMAKE_BINARY_DIR@/test"
+#define TEST_LIB_DIR "@CMAKE_BINARY_DIR@/lib"
+#define TEST_BIN_DIR "@CMAKE_BINARY_DIR@/bin"
 #define SAMPLE_PLUGIN_NAME "sample"
 #define SAMPLE_PLUGIN_SIMPLE_NAME "sample-plugin"
 
