zmq: Change styling of socket path, path to socket.
  For now, the path to the socket for Wintermute is hard-coded to be
  /tmp/wintermute.sock.

--- a/src/wintermute-transport-zeromq/CMakeLists.txt
+++ b/src/wintermute-transport-zeromq/CMakeLists.txt
@@ -24,7 +24,7 @@ INCLUDE(WintermutePlugin)
 FIND_PACKAGE(ZeroMQCXX REQUIRED)
 
 SET(WINTERMUTE_ZMQ_VERSION     0.0.1-dev)
-SET(WINTERMUTE_ZMQ_IPC_ADDRESS ${CMAKE_CURRENT_BINARY_DIR}/wintermute.sock)
+SET(WINTERMUTE_ZMQ_IPC_ADDRESS /tmp/wintermute.sock)
 
 SET(_srcs
   plugin.cpp
