zmq: Hard versioning, conditional building.
  zmq: Set hard version of ZeroMQ to be 4.1.
  zmq: Configure to be conditionally built.
  zmq: Correct build to search for C++ library.

--- a/src/wintermute-transport-zeromq/CMakeLists.txt
+++ b/src/wintermute-transport-zeromq/CMakeLists.txt
@@ -23,6 +23,11 @@ PROJECT(WintermtueTransportZeroMQ CXX)
 INCLUDE(WintermutePlugin)
 FIND_PACKAGE(ZeroMQCXX REQUIRED)
 
+if (NOT ZEROMQCXX_FOUND)
+  message(STATUS "ZeroMQ not found; not building extension.")
+  return()
+endif()
+
 SET(WINTERMUTE_ZMQ_VERSION     0.0.1-dev)
 SET(WINTERMUTE_ZMQ_IPC_ADDRESS /tmp/wintermute.sock)
 
