--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,20 @@
 language: cpp
+cache:
+  apt: true
+  pip: true
+  directories:
+    - /tmp/cmake-*.tar.gz
+    - /tmp/libuv-*.tar.gz
+    - /tmp/libconfig-*.tar.gz
+    - /tmp/zmqpp.tar.gz
 compiler:
   - gcc
   - clang
-
+branches:
+  - only:
+      - master
+      - develop
+      - /^feature-.*$/
 before_install:
   - test/bootstrap --before
 before_script:
@@ -11,13 +23,12 @@ script:
   - test/bootstrap --run
 after_success:
   - test/bootstrap --post
-
 notifications:
   webhooks:
     urls:
       - https://webhooks.gitter.im/e/a01dbbba8dcad4b82db8
     on_success: change
     on_failure: always
-    on_start: false
+    on_start: always
   slack:
     secure: cjpZPOmM9uJNyOTd09fTcT7cMoghjOc4Qiu3hThU8XhkAJ5rkUZWaXKGpiSoCM1+7t9MM3DtnFa91KNOSPPjb+OoJNrr54+RNbLUT16OIYxzynbPSQxYWJ4osqrpoLImerSjW3JQsgKsj+eWTp442OkizJsxFkAsBmPIOAh1NsA=
