ansible: Improve provisioning of test environment.
  * ansible: Ensure that LLVM PPA info is quoted.
  * ansible: Drop Kubuntu PPA since we build CMake.
  * ansible: Don't upgrade the system.
  * ansible: Drop 'libconfig' as package since we build it.
  * ansible: Add PPA for zeromq latest.
  * ansible: Upgrade system packages safely.
  * ansible: Correct syntax error for using GCC PPA.
  * ansible: Really don't upgrade system.
  * ansible: Ensure latest build tools are used.
  * ansible: Use 'libzmq-dev' instead.
  * ansible: Use 'libzmq3-dev' specifically for best ABI.
  * ansible: Add build options for zeromq.
  * ansible: Move compilers to package input for compiling deps.
  * ansible: Bump clang version to clang-3.6.

--- a/ansible/roles/packages/tasks/main.yml
+++ b/ansible/roles/packages/tasks/main.yml
@@ -6,13 +6,9 @@
     update_cache=yes
     cache_valid_time=14400
 
-- name: Upgrade system packages.
-  apt: >
-    upgrade=yes
-
 - name: Install base tooling and Git.
   apt: >
-    state=present
+    state=latest
     name={{ item }}
   with_items:
     - libtool
@@ -22,6 +18,10 @@
     - pkg-config
     - git
     - python-pip
+    - binutils
+    - libboost-program-options-dev
+
+- include: compilers.yml tags=packages,compilers,gcc,clang
 
 - name: Install 'coveralls' client package.
   pip: >
@@ -32,25 +32,17 @@
 
 - name: Install dependencies for Wintermute.
   apt: >
-    state=present
+    state=latest
     name={{ item }}
   with_items:
     - libjsoncpp-dev
     - liblog4cxx10-dev
-    - libconfig*-dev
-    - uuid-dev
-    - libzmq-dev
-
-# We're going to build and install ZeroMQ ourselves because the version we're
-# going to build with doesn't exist on Precise.
-# TODO: Flesh out build setup for libzmq.
-# TODO: Flesh out build setup for zmqpp.
-#- include: zeromq.yml   tags=packages,zeromq
+    - libzmq3-dev
 
 - name: Install test and documenation dependencies for Wintermute
   sudo: True
   apt: >
-    state=present
+    state=latest
     name={{ item }}
   with_items:
     - doxygen
@@ -61,3 +53,4 @@
 - include: cmake.yml      tags=packages,cmake
 - include: uv.yml         tags=packages,uv
 - include: libconfig.yml  tags=packages,libconfig
+- include: zmqpp.yml      tags=packages,zmq,zmqpp
