test: Suggest compiler, tweak Clang and Vagrant.
  * test: Drop version of Clang to 3.5.
  * test: Capture exit code, dump log accordingly.
  * test: Work with exit code.
  * test: Set 'CXX', not 'CC'.
  * test: Lax roles for clang, prevent var value splitting.
  * test: Shorthand for running on Vagrant.
  * test: Update ld path and pad the value of $CC.
  * test: Ensure that /usr/local is part of dylib path.
  * test: Set 'CC' to safe compiler value when generating.

--- a/ansible/roles/packages/tasks/compilers.yml
+++ b/ansible/roles/packages/tasks/compilers.yml
@@ -6,13 +6,7 @@
   when: compiler_family == "clang"
   register: compiler_install_clang
   with_items:
-    - clang-3.6
-
-- name: compilers | Set clang++-3.6 as the default C++ compiler.
-  shell: |
-    update-alternatives --install /usr/bin/c++ c++ /usr/bin/clang++-3.6 10;
-    update-alternatives --set c++ /usr/bin/clang++-3.6;
-  when: compiler_family == "clang" and compiler_install_clang.changed == true
+    - clang-3.5
 
 - name: compilers | Install gcc
   apt: >
@@ -29,4 +23,6 @@
   shell: |
     update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.9 10;
     update-alternatives --set g++ /usr/bin/g++-4.9;
+    update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.9 10;
+    update-alternatives --set gcc /usr/bin/gcc-4.9;
   when: compiler_family == "gcc" and compiler_install_gcc.changed == true
