ansible: Parallelize builds and use latest GNU C++.
  * ansible: Install G++ unconditionally.
  * ansible: Ensure that g++-4.9 is used when g++ is invoked.
  * ansible: Force parallelization of dep builds.

--- a/ansible/roles/packages/tasks/cmake.yml
+++ b/ansible/roles/packages/tasks/cmake.yml
@@ -35,7 +35,7 @@
   when: cmake_exec.stat.exists == false
 
 - name: Compile CMake.
-  command: make
+  command: make -j4
   args:
     chdir: "/tmp/cmake-{{cmake_version}}"
   when: cmake_exec.stat.exists == false
