cmake: Add {Find,Use}Wintermute.cmake templates.

--- a/cmake/Templates/Internal/FindWintermute.cmake.in
+++ b/cmake/Templates/Internal/FindWintermute.cmake.in
@@ -18,16 +18,17 @@
 # Boston, MA 02111-1307, USA.
 ###############################################################################
 
-set(WINTERMUTE_INSTALL_PREFIX "@CMAKE_INSTALL_PREFIX@")
-set(WINTERMUTE_LIBRARY_DIR
-  ${WINTERMUTE_INSTALL_PREFIX}/@CMAKE_INSTALL_LIBDIR@)
-set(WINTERMUTE_BINARY_DIR 
-  ${WINTERMUTE_INSTALL_PREFIX}/@CMAKE_INSTALL_BINDIR@)
-set(WINTERMUTE_INCLUDE_DIR
-  ${WINTERMUTE_INSTALL_PREFIX}/@CMAKE_INSTALL_INCLUDEDIR@/wintermute)
-set(WINTERMUTE_DOCS_DIR
-  ${WINTERMUTE_INSTALL_PREFIX}/@CMAKE_INSTALL_DATAROOTDIR@/doc)
-set(WINTERMUTE_DATA_DIR
-  ${WINTERMUTE_INSTALL_PREFIX}/@CMAKE_INSTALL_DATAROOTDIR@/wintermute)
 set(WINTERMUTE_CMAKE_DIR
   "${WINTERMUTE_INSTALL_PREFIX}/@CMAKE_INSTALL_DATAROOTDIR@/cmake-@CMAKE_MAJOR_VERSION@-@CMAKE_MINOR_VERSION@")
+
+list(APPEND CMAKE_MODULE_PATH ${WINTERMUTE_CMAKE_DIR})
+
+include(UseWintermute)
+
+if(NOT WINTERMUTE_FOUND)
+  message(FATAL "Wintermute was not found.")
+else()
+  include(WintermuteVariables)
+  include(WintermuteDependencies)
+  include(WintermuteVersion)
+endif()
