cmake: Implement 'FindWintermute.cmake'.
  * Define 'UseWintermute' to write out build information.
  * Define 'WintermuteSourceBuild' so we can handle local build
    variables.

--- a/cmake/Templates/Internal/UseWintermute.cmake.in
+++ b/cmake/Templates/Internal/UseWintermute.cmake.in
@@ -30,4 +30,11 @@ set(WINTERMUTE_DOCS_DIR
 set(WINTERMUTE_DATA_DIR
   ${WINTERMUTE_INSTALL_PREFIX}/@CMAKE_INSTALL_DATAROOTDIR@/wintermute)
 set(WINTERMUTE_CMAKE_DIR
-  "${WINTERMUTE_INSTALL_PREFIX}/@CMAKE_INSTALL_DATAROOTDIR@/cmake-@CMAKE_MAJOR_VERSION@-@CMAKE_MINOR_VERSION@")
+  "${WINTERMUTE_INSTALL_PREFIX}/@CMAKE_INSTALL_DATAROOTDIR@/cmake-@CMAKE_MAJOR_VERSION@.@CMAKE_MINOR_VERSION@")
+set(WINTERMUTE_CMAKE_MODULE_DIR
+  ${WINTERMUTE_CMAKE_DIR}/Modules)
+set(WINTERMUTE_CMAKE_TEMPLATE_DIR
+  ${WINTERMUTE_CMAKE_DIR}/Templates)
+set(WINTERMUTE_FOUND ON)
+
+INCLUDE(WintermuteSourceBuild OPTIONAL)
