--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -22,16 +22,16 @@
 INCLUDE(GNUInstallDirs)
 
 # == Set variables to make Wintermute building a bit more sane.
-SET(BUILD_SHARED_LIBRARIES ON PARENT_SCOPE)
-SET(CMAKE_COLOR_MAKEFILE ON PARENT_SCOPE)
-SET(CMAKE_VERBOSE_MAKEFILE OFF PARENT_SCOPE)
-SET(CMAKE_EXPORT_COMPILE_COMMANDS ON PARENT_SCOPE)
+SET(BUILD_SHARED_LIBRARIES         ON  PARENT_SCOPE)
+SET(CMAKE_COLOR_MAKEFILE           ON  PARENT_SCOPE)
+SET(CMAKE_EXPORT_COMPILE_COMMANDS  ON  PARENT_SCOPE)
+SET(CMAKE_VERBOSE_MAKEFILE         OFF PARENT_SCOPE)
 SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin PARENT_SCOPE)
 SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib PARENT_SCOPE)
 SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib PARENT_SCOPE)
 
 # == Allow this project to use the modules we've provided.
-SET(CMAKE_MODULE_PATH
+set(CMAKE_MODULE_PATH
   ${CMAKE_MODULE_PATH}
   ${CMAKE_SOURCE_DIR}/cmake/Modules/
   ${CMAKE_SOURCE_DIR}/cmake/Modules/Internal/
@@ -43,14 +43,18 @@ SET(CMAKE_MODULE_PATH
 # == Generate 'UseWintermute.cmake'
 CONFIGURE_FILE(
   ${CMAKE_CURRENT_SOURCE_DIR}/Templates/Internal/UseWintermute.cmake.in
-  ${CMAKE_CURRENT_SOURCE_DIR}/Modules/Internal/UseWintermute.cmake
+  ${CMAKE_CURRENT_SOURCE_DIR}/Modules/UseWintermute.cmake
   @ONLY)
 
-INCLUDE(WintermuteSourceBuild)
 INCLUDE(CMakeProvideUninstallTarget)
-INCLUDE(UseWintermute)
 
-# == Install modules
-#INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Modules
-  #DESTINATION ${WINTERMUTE_CMAKE_DIR}/Modules
-#)
+# == Install modules and templates.
+file(GLOB _modules Modules/*.cmake)
+file(GLOB _templates Templates/*.in)
+
+INSTALL(FILES ${_modules}
+  DESTINATION ${WINTERMUTE_INSTALL_CMAKE_MODULE_DIR}
+)
+INSTALL(FILES ${_templates}
+  DESTINATION ${WINTERMUTE_INSTALL_CMAKE_TEMPLATE_DIR}
+)
