cmake: Provide option to auto-install plugins.

--- a/test/fixtures/CMakeLists.txt
+++ b/test/fixtures/CMakeLists.txt
@@ -29,6 +29,7 @@ set(_srcs
 ADD_LIBRARY(wintermute-sample-plugin SHARED ${_srcs})
 
 WINTERMUTE_PLUGIN_DECLARE(
+  AUTO_INSTALL OFF
   TARGET
     wintermute-sample-plugin
   INCLUDE_DIRECTORIES
