cmake: Ensure WINTERMUTE_CMAKE_INSTALL_*_DIR were preserved.

--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -47,6 +47,7 @@ CONFIGURE_FILE(
   @ONLY)
 
 INCLUDE(CMakeProvideUninstallTarget)
+INCLUDE(WintermuteSourceBuild)
 
 # == Install modules and templates.
 file(GLOB _modules Modules/*.cmake)
